# python-ai-chatbot

./: README.md  chatbot.py  chatbot_model.h5  intents.json  pyproject.toml  requirements.txt  see_docs.json  training.py  words.pkl
