[tool.poetry]
name = "python-ai-chatbot"
version = "0.1.0"
description = "Python ia chat bot"
authors = ["Anderson F Lima <andersonfaustinolima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
nltk = "^3.5"
tensorflow = "^2.4.0"

[tool.poetry.dev-dependencies]
numpy = "^1.19.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
